fix(color-token-table): table overflowing page width

--- a/packages/web/src/app/doc-pages/brand/color-doc/color-token-table/color-token-table.component.scss
+++ b/packages/web/src/app/doc-pages/brand/color-doc/color-token-table/color-token-table.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: grid;
+  grid-auto-columns: minmax(0, 1fr);
   gap: 32px;
 }
 
